[gd_scene load_steps=43 format=3 uid="uid://dh4rwigqkk6va"]

[ext_resource type="Script" uid="uid://ed0krfnshn1s" path="res://ui/hud/hud_handler.gd" id="1_prp1p"]
[ext_resource type="Texture2D" uid="uid://co2ho6yh415d6" path="res://ui/hud/hud_bar.png" id="2_77nrq"]
[ext_resource type="Texture2D" uid="uid://cbl2184sxvg3f" path="res://ui/hud/crosshairs_atlas.png" id="3_ejr72"]
[ext_resource type="AudioStream" uid="uid://o816q1rjjvy3" path="res://audio/streams/ui/danger_beep.ogg" id="3_vyajj"]
[ext_resource type="Texture2D" uid="uid://dm7hg6gel5eeu" path="res://ui/hud/keys_atlas.png" id="4_3g4p3"]
[ext_resource type="Shader" uid="uid://cojje7iwsab1k" path="res://shaders/canvas/inverse_hud.gdshader" id="5_33rrr"]
[ext_resource type="Texture2D" uid="uid://cywpqd2oi8p3r" path="res://ui/hud/weapons_atlas.png" id="5_rr2yr"]
[ext_resource type="Texture2D" uid="uid://bf3n3tgu6akfw" path="res://ui/hud/weapon_frames_atlas.png" id="6_xihl4"]
[ext_resource type="PackedScene" uid="uid://dv0a4feruvg2r" path="res://ui/hud/event.tscn" id="8_8bnt1"]
[ext_resource type="Shader" uid="uid://1q74qi1atrpy" path="res://shaders/canvas/post_process/distortions.gdshader" id="9_10rx0"]
[ext_resource type="Script" uid="uid://bt1minidk5acq" path="res://ui/hud/statistics.gd" id="10_pfwyh"]
[ext_resource type="Theme" uid="uid://dwof7m2ye3tjh" path="res://ui/default_theme.tres" id="10_y0l7u"]
[ext_resource type="Texture2D" uid="uid://b58io17r5p4d8" path="res://ui/button/button.png" id="11_so7dh"]
[ext_resource type="Texture2D" uid="uid://cdqnexn80x2tg" path="res://ui/progress_bar.png" id="12_t2h22"]

[sub_resource type="Gradient" id="Gradient_ljioa"]
offsets = PackedFloat32Array(0.5, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_isuaa"]
gradient = SubResource("Gradient_ljioa")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7oab2"]
gradient = SubResource("Gradient_ljioa")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_230g8"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_s8m2x"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.75, 1)
colors = PackedColorArray(0, 0, 1, 0, 0, 0, 1, 0.25098)
metadata/_snap_enabled = true
metadata/_snap_count = 8

[sub_resource type="GradientTexture2D" id="GradientTexture2D_aukdt"]
gradient = SubResource("Gradient_s8m2x")
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_2rvi6"]
seed = 475
frequency = 0.0195

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_brdks"]
seamless = true
noise = SubResource("FastNoiseLite_2rvi6")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uawrc"]
shader = ExtResource("9_10rx0")
shader_parameter/temperature = 1.0
shader_parameter/heat_scale_max = 8.0
shader_parameter/heat_speed = 0.1
shader_parameter/heat_noise = SubResource("NoiseTexture2D_brdks")

[sub_resource type="LabelSettings" id="LabelSettings_ithsr"]
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.12549)
shadow_offset = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_cr6i1"]
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.12549)
shadow_offset = Vector2(0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kksp3"]
shader = ExtResource("5_33rrr")

[sub_resource type="AtlasTexture" id="AtlasTexture_6dcnq"]
atlas = ExtResource("3_ejr72")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mab5h"]
atlas = ExtResource("4_3g4p3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwsqw"]
atlas = ExtResource("4_3g4p3")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kep41"]
atlas = ExtResource("4_3g4p3")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tiso"]
atlas = ExtResource("5_rr2yr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2lr2"]
atlas = ExtResource("6_xihl4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dbyc"]
atlas = ExtResource("5_rr2yr")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y4ls"]
atlas = ExtResource("6_xihl4")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o00qo"]
atlas = ExtResource("5_rr2yr")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayrss"]
atlas = ExtResource("6_xihl4")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qflcx"]
atlas = ExtResource("5_rr2yr")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g556c"]
atlas = ExtResource("6_xihl4")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wwlc"]
atlas = ExtResource("5_rr2yr")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1htvs"]
atlas = ExtResource("6_xihl4")
region = Rect2(0, 128, 32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_7whak"]
line_spacing = 0.0
font_color = Color(0, 1, 0, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(1, 2)

[sub_resource type="GDScript" id="GDScript_suxms"]
script/source = "extends Label

var frame_samples: Array[float]
var tick_samples: Array[float]

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	for n: int in range(60):
		frame_samples.append(0.0)
		tick_samples.append(0.0)


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	frame_samples.pop_back()
	frame_samples.push_front(1.0/delta)

	text = \"%03.2f/%03.2f\\n%03.2f/%03.2f\" % [
			frame_samples[0],
			_average(frame_samples),
			tick_samples[0],
			_average(tick_samples),
	]


func _physics_process(delta: float) -> void:
	tick_samples.pop_back()
	tick_samples.push_front(1.0/delta)


func _average(of: Array[float]):
	var out: float = 0.0
	for n: float in of:
		out += n
	return out / of.size()
"

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
mouse_filter = 2
script = ExtResource("1_prp1p")
event_item = ExtResource("8_8bnt1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 5
bus = &"UI"

[node name="RapidDamagePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vyajj")
volume_db = -2.0
bus = &"UI"

[node name="Blood" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_isuaa")

[node name="Flash" type="TextureRect" parent="."]
visible = false
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_7oab2")

[node name="InvulnFlash" type="TextureRect" parent="."]
visible = false
texture_filter = 2
material = SubResource("CanvasItemMaterial_230g8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_aukdt")

[node name="HeatFlash" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FlashOld" type="TextureRect" parent="HeatFlash"]
visible = false
modulate = Color(1, 0.501961, 0, 1)
texture_filter = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_7oab2")

[node name="BackBufferCopy" type="BackBufferCopy" parent="HeatFlash"]
copy_mode = 2

[node name="Distortions" type="ColorRect" parent="HeatFlash"]
material = SubResource("ShaderMaterial_uawrc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Flash" type="ColorRect" parent="HeatFlash"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.5, 0, 0.501961)

[node name="HUDPanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(0, 48)
texture = ExtResource("2_77nrq")
patch_margin_left = 352
patch_margin_right = 96
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="AmmoCounter" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -28.0
offset_right = -8.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
theme = ExtResource("10_y0l7u")
text = "200/200"
label_settings = SubResource("LabelSettings_ithsr")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HealthCounter" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -44.0
offset_right = -8.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
theme = ExtResource("10_y0l7u")
text = "100%"
label_settings = SubResource("LabelSettings_cr6i1")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Crosshairs" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_kksp3")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)
mouse_filter = 2
texture = SubResource("AtlasTexture_6dcnq")
stretch_mode = 3

[node name="KeysContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -32.0
offset_right = 96.0
grow_vertical = 0
pivot_offset = Vector2(0, 32)
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Red" type="TextureRect" parent="KeysContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_mab5h")
stretch_mode = 2

[node name="Green" type="TextureRect" parent="KeysContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_fwsqw")
stretch_mode = 2

[node name="Blue" type="TextureRect" parent="KeysContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_kep41")
stretch_mode = 2

[node name="WeaponsContainer2D" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 112.0
offset_top = -32.0
offset_right = 336.0
grow_vertical = 0
mouse_filter = 2

[node name="Category0" type="TextureRect" parent="WeaponsContainer2D"]
self_modulate = Color(0.5, 0.5, 0.5, 1)
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_6tiso")
stretch_mode = 2

[node name="Frame" type="TextureRect" parent="WeaponsContainer2D/Category0"]
show_behind_parent = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_y2lr2")
stretch_mode = 2

[node name="Category1" type="TextureRect" parent="WeaponsContainer2D"]
self_modulate = Color(0.5, 0.5, 0.5, 1)
layout_mode = 2
offset_left = 32.0
offset_right = 64.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_6dbyc")
stretch_mode = 2

[node name="Frame" type="TextureRect" parent="WeaponsContainer2D/Category1"]
show_behind_parent = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_0y4ls")
stretch_mode = 2

[node name="Category2" type="TextureRect" parent="WeaponsContainer2D"]
visible = false
self_modulate = Color(0.5, 0.5, 0.5, 1)
layout_mode = 2
offset_left = 64.0
offset_right = 96.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_o00qo")
stretch_mode = 2

[node name="Frame" type="TextureRect" parent="WeaponsContainer2D/Category2"]
show_behind_parent = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_ayrss")
stretch_mode = 2

[node name="Category3" type="TextureRect" parent="WeaponsContainer2D"]
visible = false
self_modulate = Color(0.5, 0.5, 0.5, 1)
layout_mode = 2
offset_left = 96.0
offset_right = 128.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_qflcx")
stretch_mode = 2

[node name="Frame" type="TextureRect" parent="WeaponsContainer2D/Category3"]
show_behind_parent = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_g556c")
stretch_mode = 2

[node name="Category4" type="TextureRect" parent="WeaponsContainer2D"]
visible = false
self_modulate = Color(0.5, 0.5, 0.5, 1)
layout_mode = 2
offset_left = 128.0
offset_right = 160.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_2wwlc")
stretch_mode = 2

[node name="Frame" type="TextureRect" parent="WeaponsContainer2D/Category4"]
show_behind_parent = true
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2
texture = SubResource("AtlasTexture_1htvs")
stretch_mode = 2

[node name="PowerupDisplay" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 352.0
offset_top = -16.0
offset_right = -96.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("10_y0l7u")

[node name="FastFingersTimer" type="TextureProgressBar" parent="PowerupDisplay"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("10_y0l7u")
max_value = 60.0
step = 0.0
value = 60.0
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("11_so7dh")
texture_progress = ExtResource("12_t2h22")
tint_progress = Color(0.490196, 0.392157, 0, 1)

[node name="BerserkTimer" type="TextureProgressBar" parent="PowerupDisplay"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("10_y0l7u")
max_value = 60.0
step = 0.0
value = 60.0
allow_greater = true
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("11_so7dh")
texture_progress = ExtResource("12_t2h22")
tint_progress = Color(0.53, 0, 0, 1)

[node name="FiltersTimer" type="TextureProgressBar" parent="PowerupDisplay"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("10_y0l7u")
max_value = 60.0
step = 0.0
value = 60.0
allow_greater = true
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("11_so7dh")
texture_progress = ExtResource("12_t2h22")
tint_progress = Color(0.294118, 0.392157, 0.196078, 1)

[node name="InvulnTimer" type="TextureProgressBar" parent="PowerupDisplay"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("10_y0l7u")
max_value = 30.0
step = 0.0
value = 30.0
allow_greater = true
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
texture_under = ExtResource("11_so7dh")
texture_progress = ExtResource("12_t2h22")
tint_progress = Color(0, 0, 1, 1)

[node name="EventContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 512.0
offset_bottom = -48.0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="AlertContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_right = 256.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Alert" type="RichTextLabel" parent="AlertContainer"]
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("10_y0l7u")
bbcode_enabled = true
text = "[center]lorem ipsum[/center]"
fit_content = true

[node name="TooltipContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = 16.0
offset_right = 256.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Tooltip" type="RichTextLabel" parent="TooltipContainer"]
layout_mode = 2
size_flags_vertical = 2
theme = ExtResource("10_y0l7u")
bbcode_enabled = true
text = "[center]dolor sit amet[/center]
"
fit_content = true

[node name="Diagnostics" type="Label" parent="."]
process_mode = 4
process_priority = 1
process_physics_priority = 1
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -133.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 50.0
grow_horizontal = 0
theme = ExtResource("10_y0l7u")
text = "FPS: 60.00/60.00
TPS: 60.00/60.00"
label_settings = SubResource("LabelSettings_7whak")
script = SubResource("GDScript_suxms")

[node name="ColorRect" type="ColorRect" parent="Diagnostics"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="Statistics" type="Label" parent="."]
process_mode = 4
process_priority = 1
process_physics_priority = 1
visible = false
layout_mode = 1
offset_left = 4.0
offset_top = 4.0
offset_right = 133.0
offset_bottom = 142.0
theme = ExtResource("10_y0l7u")
text = "WHATEVER
00:00:00.000
00:00:00.000
00/00 Kills
0/4 Secrets
000,000,000,000"
label_settings = SubResource("LabelSettings_7whak")
uppercase = true
script = ExtResource("10_pfwyh")

[node name="ColorRect" type="ColorRect" parent="Statistics"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)
